# OpenRegex

./: .env.example  CHANGELOG.md  LICENSE  NOTICE  README.md  TERMS.md  THIRD-PARTY-LICENSES.md  docker-compose.yml  pyproject.toml
.dev/: apply_versions.py  build_and_push.py  registry.py
.dev/py/: config.py
.dev/scripts/: run.bat
.github/: FUNDING.yml
apps/openregex-backend/: CHANGELOG.md  pyproject.toml
apps/openregex-backend/src/: backend_runner.py
apps/openregex-backend/src/backend/: routes.py
apps/openregex-backend/src/backend/api/: ai.py  discovery.py  execution.py  system.py
apps/openregex-backend/src/backend/core/: config.py  redis.py
apps/openregex-frontend/: CHANGELOG.md  index.html  nginx.conf  package.json  tailwind.config.js  vite.config.ts
deploy/: docker-compose.dev.yml  docker-compose.yml  run_deploy.bat  run_dev.bat
deploy/dockerfiles/: openregex-backend.dockerfile  openregex-frontend.dockerfile  worker-ai.dockerfile  worker-c-cpp.dockerfile  worker-dotnet.dockerfile  worker-go.dockerfile  worker-jvm.dockerfile  worker-php.dockerfile  worker-python.dockerfile  worker-rust.dockerfile  worker-v8.dockerfile
docs/: README.md
docs/architecture/: FrontendArchitecture.md  WorkerNodeArchitecture.md
docs/guidelines/: Commit.md  (+1 more)
workers/worker-ai/: CHANGELOG.md  pyproject.toml
workers/worker-ai/src/: worker_runner.py
workers/worker-ai/src/worker_ai/: broker.py  processor.py  prompts.py  tasks.py
workers/worker-ai/src/worker_ai/ai/: __init__.py
workers/worker-ai/src/worker_ai/tasks/: __init__.py  generate.py  intent.py  optimize.py  title.py  utils.py
workers/worker-c-cpp/: CHANGELOG.md  pyproject.toml
workers/worker-c-cpp/engines/engine-c-onig/: main.cpp
workers/worker-c-cpp/engines/engine-c-pcre2/: main.cpp
workers/worker-c-cpp/engines/engine-c-posix/: main.cpp
workers/worker-c-cpp/engines/engine-cpp-boost/: main.cpp
workers/worker-c-cpp/engines/engine-cpp-hyperscan/: main.cpp
workers/worker-c-cpp/engines/engine-cpp-re2/: main.cpp
workers/worker-c-cpp/engines/engine-cpp-std/: main.cpp
workers/worker-c-cpp/src/: worker_runner.py
workers/worker-c-cpp/src/worker_c_cpp/: processor.py  registry.py
workers/worker-c-cpp/src/worker_c_cpp/engines/: __init__.py  c_onig.py  c_pcre2.py  c_posix.py  common.py  cpp_boost.py  cpp_hyperscan.py  cpp_re2.py  cpp_std.py
(+146 files in other folders)
