[project]
name = "openregex"
version = "1.0.0"
requires-python = ">=3.14"
dependencies = [

]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "project-scriber"
]

[tool.uv.workspace]
members = [
    "apps/openregex-backend",
    "libs/python-shared",
    "workers/worker-python",
    "workers/worker-c-cpp",
    "workers/worker-ai"
]

[tool.scriber]
use_gitignore = true
single_process = false
exclude = [
    #    ".dev",
    ".github",
    #    "workers",
    #    "apps",
    "LICENSE",
    "NOTICE",
    ".git/",
    ".idea/",
    ".vscode/",
    ".project/",
    ".settings/",
    ".classpath/",
    ".ruff_cache",
    "__pycache__/",
    "*.pyc",
    ".venv/",
    "venv/",
    ".pytest_cache/",
    "uv.lock",
    "node_modules/",
    "npm-debug.log*",
    "yarn-error.log",
    "build/",
    "dist/",
    "target/",
    "bin/",
    "obj/",
    "out/",
    "vendor/",
    "bower_components/",
    "*.log",
    "*.lock",
    "*.tmp",
    "temp/",
    "tmp/",
    ".DS_Store",
    "Thumbs.db",
    "*~",
    "*.swp",
    "*.swo",
    "scriber_output.txt",
    ".scriber.json"
]
hidden = [
    ".env",
    "CHANGELOG.md",
    "*.svg"]
