[project]
name = "openregex-backend"
version = "2.0.0"
dependencies = [
    "fastapi",
    "uvicorn",
    "redis",
    "openregex-libs",
]

[tool.uv.sources]
openregex-libs = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]