[project]
name = "openregex-worker-ai"
version = "1.0.0"
dependencies = [
    "redis",
    "requests",
    "openregex-libs",
]

[tool.uv.sources]
openregex-libs = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/worker_ai"]