[project]
name = "openregex-worker-c-cpp"
version = "1.0.0"
dependencies = [
    "redis",
    "openregex-libs",
]

[tool.uv.sources]
openregex-libs = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/worker_c_cpp"]